2004-05-31  Release Manager

	* GCC 3.3.4 Released.

2004-02-14  Release Manager

	* GCC 3.3.3 Released.

2003-10-16  Release Manager

	* GCC 3.3.2 Released.

2003-08-13  Matthias Klose  <doko@debian.org>

	* fastjar.texi: License manual under the GPL.
	* Makefile.am: Remove reference to fdl.texi
	* Makefile.in: Regenerate

2003-08-04  Release Manager

	* GCC 3.3.1 Released.

2003-07-11  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* README: Note that FastJar is not part of GCC.

2003-05-13  Release Manager

	* GCC 3.3 Released.

2003-03-30  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fastjar.texi: Remove @ at start of file.

2003-03-10  Mohan Embar  <gnustuff@thisiscool.com>

       * dostime.c: add #include <stddef.h> for definition of NULL

2003-02-04  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fastjar.texi: Update to GFDL 1.2.

2003-01-31  Daiki Ueno  <ueno@unixuser.org>

	* jartool.c (extract_jar): Don't lseek to skip extra fields.
	(consume): If the stream is seekable, do lseek.

2003-01-28  Ranjit Mathew  <rmathew@hotmail.com>

	* jargrep.c: Include xregex.h from libiberty instead of
	system regex.h for better portability.

2003-01-21  Ranjit Mathew  <rmathew@hotmail.com>

	* jartool.c (list_jar): Terminate the 'ascii_date' buffer
	with a '\0' to guard against the case where the formatted
	time string is more than the size allowed by the buffer.

2002-12-30  DJ Delorie  <dj@redhat.com>

	* Makefile.am (jar.1, grepjar.1): Protect against
	texi2pod/pod2man failing.
	* Makefile.in: Regenerated.

2002-12-23  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fastjar.texi: Include Cover Texts in man page.

2002-12-04  Jakub Jelinek  <jakub@redhat.com>

	* fastjar.texi (jar @direntry, grepjar @direntry): Add (fastjar).

2002-11-21  Ranjit Mathew <rmathew@hotmail.com>

	* jartool.c (extract_jar): Use "open" with O_BINARY instead of
	"creat" to create extracted files.

2002-11-11  Tom Tromey  <tromey@redhat.com>
