@@ -1,3 +1,12 @@
+2004-07-27  Jones Desougi <jones@ingate.com>
+            Kelley Cook <kcook@gcc.gnu.org>
+
+	PR bootstrap/15194
+	* acinclude.m4 (gcc_AC_COMPILE_CHECK_SIZEOF): Return 0 when type
+	doesn't exist.
+	* aclocal.m4: Regenerate.
+	* configure: Regenearate.
+
 2004-05-31  Release Manager
 
 	* GCC 3.3.4 Released.
